--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-            distribution: 'temurin'
+            distribution: 'oracle'
             java-version: '21'
 
       - run: mvn clean package
