--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -3,14 +3,18 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: jdk install
+    services:
+      loki:
+        image: grafana/loki
+        ports:
+          - "3100:3100"
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: checkout Repo
+        uses: actions/checkout@v4
+      - name: JDK Repo
+        uses: actions/setup-java@v4
         with:
             distribution: 'oracle'
             java-version: '21'
-
-      - run: mvn clean package
-
-
+      - name: Mvn package
+        run: mvn -DLOKI_URL=http://loki:3100 clean install
