--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,9 +53,9 @@ jobs:
       - name: SSH to Actions
         uses: rdp-studio/ssh2actions@v2.0.0
         with:
-          host: ${{ HOST_IP }}
-          username: ${{ USERNAME }}
-          key: ${{ KEY }}
-          port: ${{ PORT }}
-          passphrase: ${{ PASSPHRASE }}
+          host: ${{ secrets.HOST_IP }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           script: echo "hello"
