build.yml add ssh

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,19 +42,15 @@ jobs:
   deploy:
     needs: [ test ]
     runs-on: ubuntu-latest
-    services:
-      loki:
-        image: grafana/loki
-        ports:
-          - "3100:3100"
     steps:
       - name: checkout Repo
         uses: actions/checkout@v4
-      - name: SSH to Actions
-        uses: appleboy/ssh-action@v1.0.3
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.HOST_IP }}
           username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
-          script: ls -a
+          key: ${{ secrets.KEY }}
+          source: "./"
+          target: "/SpringBootAuth"
