--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,4 +57,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
-          script: "git pull & cd SpringBootAuth & docker build ."
+          script: "cd SpringBootAuth & git pull & docker build ."
