--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,4 +57,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
-          script: "cd SpringBootAuth && git pull && mvn clean package && docker build ."
+          script: "cd SpringBootAuth && git pull && source ~/.bashrc &&
+          && mvnw -DLOKI_URL=${{ secrets.LOKI_URL }} clean package && docker build  --build-arg 
+          LOKI_URL=${{ secrets.LOKI_URL }} ."
