--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,4 +62,5 @@ jobs:
             cd SpringBootAuth
             git pull
             ./mvnw -DLOKI_URL=${{ secrets.LOKI_URL }} clean package
-            docker build  --build-arg LOKI_URL=${{ secrets.LOKI_URL }} .
+            docker build  --build-arg LOKI_URL=${{ secrets.LOKI_URL }} -t springauth:latest .
+            docker run -d -p 8080:8080 --name spring-prod springauth:latest
