--- a/metrics/prometheus/prometheus.yml
+++ b/metrics/prometheus/prometheus.yml
@@ -3,6 +3,6 @@ scrape_configs:
     metrics_path: "/actuator/prometheus"
     scrape_interval: 3s
     static_configs:
-      - targets: ["spring-auth:8080"]
+      - targets: ["92.206.107.36:8080"]
         labels:
           application: "SpringAuth"
